--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rets-client",
+  "name": "@anaidenko/rets-client",
   "version": "5.2.4",
   "description": "A RETS client (Real Estate Transaction Standard).",
   "main": "index.js",
@@ -7,7 +7,6 @@
   "dependencies": {
     "base64-stream": "^0.1.3",
     "bluebird": "^2.9.25",
-    "bufferstream": "^0.6.2",
     "debug": "^2.2.0",
     "formidable": "~1.1.1",
     "node-expat": "^2.3.10",
@@ -19,13 +18,13 @@
   "devDependencies": {
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.43",
-    "@types/node": "^8.0.31",
+    "@types/node": "^12.0.0",
     "chai": "^4.1.2",
     "coffeescript": "^1.8.0",
     "mocha": "^3.5.3",
     "source-map-support": "^0.4.18",
     "ts-node": "^3.3.0",
-    "typescript": "^2.5.3"
+    "typescript": "^3.0.3"
   },
   "files": [
     "dist",
